--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
 	"devDependencies": {
 		"@changesets/cli": "^2.27.10",
 		"@dotenvx/dotenvx": "^1.34.0",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^22.15.30",
 		"@vscode/vsce": "3.3.2",
 		"esbuild": "^0.25.0",
 		"eslint": "^9.27.0",
 		"husky": "^9.1.7",
+		"isbinaryfile": "^5.0.2",
 		"knip": "^5.44.4",
 		"lint-staged": "^16.0.0",
 		"mkdirp": "^3.0.1",
@@ -38,7 +41,8 @@
 		"prettier": "^3.4.2",
 		"rimraf": "^6.0.1",
 		"turbo": "^2.5.3",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"vitest": "^3.2.2"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx,json,css,md}": [
