fix: Prevent auto-approve toast from showing after dismissal
This PR addresses issue #2579, where the auto-approve toast notification would reappear even after the user selected "Don't show again." The root cause was that the user's preference was not being persisted across sessions.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,12 @@ out
 out-*
 node_modules
 coverage/
-mock/
 
 .DS_Store
+
+# Webview UI specific ignores
+webview-ui/node_modules
+webview-ui/dist
 
 # IDEs
 .idea
