Add GitHub Actions workflows for evals Docker Compose testing
- Add comprehensive evals.yml workflow for full testing and evaluation runs
- Add evals-quick-test.yml for fast Docker Compose networking validation
- Include documentation in GITHUB_ACTIONS.md
- Workflows trigger on PRs and support manual dispatch for testing

--- a/.github/workflows/evals-quick-test.yml
+++ b/.github/workflows/evals-quick-test.yml
@@ -1,6 +1,11 @@
 name: Evals Quick Test
 
 on:
+  pull_request:
+    branches: [main, develop]
+    paths:
+      - 'packages/evals/**'
+      - '.github/workflows/evals*.yml'
   workflow_dispatch:
 
 env:
