--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"lint": "eslint src --ext=ts,tsx --max-warnings=0",
 		"check-types": "tsc",
+		"pretest": "turbo run bundle --cwd ..",
 		"test": "jest -w=40%",
 		"format": "prettier --write src",
 		"dev": "vite",
@@ -16,58 +17,56 @@
 		"clean": "rimraf ../src/webview-ui/build ../apps/vscode-nightly/build/webview-ui tsconfig.tsbuildinfo .turbo"
 	},
 	"dependencies": {
-		"@anthropic-ai/sdk": "^0.37.0",
-		"@radix-ui/react-alert-dialog": "^1.1.13",
-		"@radix-ui/react-checkbox": "^1.3.1",
-		"@radix-ui/react-collapsible": "^1.1.10",
-		"@radix-ui/react-dialog": "^1.1.13",
-		"@radix-ui/react-dropdown-menu": "^2.1.14",
+		"@radix-ui/react-alert-dialog": "^1.1.6",
+		"@radix-ui/react-checkbox": "^1.1.5",
+		"@radix-ui/react-collapsible": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.5",
 		"@radix-ui/react-icons": "^1.3.2",
-		"@radix-ui/react-popover": "^1.1.13",
-		"@radix-ui/react-portal": "^1.1.8",
-		"@radix-ui/react-progress": "^1.1.6",
-		"@radix-ui/react-select": "^2.2.4",
-		"@radix-ui/react-separator": "^1.1.6",
-		"@radix-ui/react-slider": "^1.3.4",
-		"@radix-ui/react-slot": "^1.2.2",
+		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-portal": "^1.1.5",
+		"@radix-ui/react-progress": "^1.1.2",
+		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.2",
+		"@radix-ui/react-slider": "^1.2.3",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@roo-code/types": "workspace:^",
 		"@tailwindcss/vite": "^4.0.0",
-		"@tanstack/react-query": "^5.76.1",
+		"@tanstack/react-query": "^5.68.0",
 		"@vscode/codicons": "^0.0.36",
 		"@vscode/webview-ui-toolkit": "^1.4.0",
 		"axios": "^1.7.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"cmdk": "^1.1.1",
+		"cmdk": "^1.0.0",
 		"date-fns": "^4.1.0",
-		"debounce": "^2.2.0",
+		"debounce": "^2.1.1",
 		"fast-deep-equal": "^3.1.3",
 		"fzf": "^0.5.2",
-		"i18next": "^24.2.3",
+		"i18next": "^24.2.2",
 		"i18next-http-backend": "^3.0.2",
 		"knuth-shuffle-seeded": "^1.0.6",
 		"lru-cache": "^11.1.0",
 		"lucide-react": "^0.513.0",
-		"mammoth": "^1.8.0",
-		"mermaid": "^11.6.0",
+		"mermaid": "^11.4.1",
 		"posthog-js": "^1.227.2",
 		"pretty-bytes": "^6.1.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-i18next": "^15.5.1",
+		"react-i18next": "^15.4.1",
 		"react-markdown": "^9.0.3",
 		"react-remark": "^2.1.0",
-		"react-textarea-autosize": "^8.5.9",
-		"react-use": "^17.6.0",
-		"react-virtuoso": "^4.12.7",
+		"react-textarea-autosize": "^8.5.3",
+		"react-use": "^17.5.1",
+		"react-virtuoso": "^4.7.13",
 		"rehype-highlight": "^7.0.0",
 		"remark-gfm": "^4.0.1",
-		"remove-markdown": "^0.6.2",
+		"remove-markdown": "^0.6.0",
 		"shell-quote": "^1.8.2",
-		"shiki": "^3.4.1",
+		"shiki": "^3.2.1",
 		"source-map": "^0.7.4",
-		"styled-components": "^6.1.18",
+		"styled-components": "^6.1.13",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss": "^4.0.0",
 		"tailwindcss-animate": "^1.0.7",
@@ -75,7 +74,7 @@
 		"use-sound": "^5.0.0",
 		"vscode-material-icons": "^0.1.1",
 		"vscrui": "^0.2.2",
-		"zod": "^3.24.4"
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@jest/globals": "^29.7.0",
@@ -83,15 +82,15 @@
 		"@roo-code/config-typescript": "workspace:^",
 		"@storybook/addon-essentials": "^8.5.6",
 		"@storybook/blocks": "^8.5.6",
-		"@storybook/react": "^8.6.12",
+		"@storybook/react": "^8.5.6",
 		"@storybook/react-vite": "^8.5.6",
 		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.3.0",
+		"@testing-library/react": "^16.2.0",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/jest": "^29.0.0",
 		"@types/node": "^18.0.0",
 		"@types/react": "^18.3.23",
-		"@types/react-dom": "^18.3.7",
+		"@types/react-dom": "^18.3.5",
 		"@types/shell-quote": "^1.7.5",
 		"@types/testing-library__jest-dom": "^5.14.5",
 		"@types/vscode-webview": "^1.57.5",
