--- a/.github/workflows/code-qa.yml
+++ b/.github/workflows/code-qa.yml
@@ -45,7 +45,11 @@ jobs:
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                os: [blacksmith-4vcpu-ubuntu-2404, windows-latest]
+                include:
+                    - os: blacksmith-4vcpu-ubuntu-2404
+                      name: ubuntu-latest
+                    - os: windows-latest
+                      name: windows-latest
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
