--- a/packages/cloud/package.json
+++ b/packages/cloud/package.json
@@ -19,7 +19,7 @@
 	"devDependencies": {
 		"@roo-code/config-eslint": "workspace:^",
 		"@roo-code/config-typescript": "workspace:^",
-		"@types/node": "^22.15.20",
+		"@types/node": "20.x",
 		"@types/vscode": "^1.84.0",
 		"vitest": "^3.1.3"
 	}
