--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -28,7 +28,7 @@
 	"devDependencies": {
 		"@roo-code/config-eslint": "workspace:^",
 		"@roo-code/config-typescript": "workspace:^",
-		"@types/node": "^22.15.20",
+		"@types/node": "20.x",
 		"tsup": "^8.3.5",
 		"vitest": "^3.1.3"
 	}
