feat(ci): Add locale key ordering linter to CI workflow
Adds a new CI step to verify that all locale files maintain the same key ordering as their corresponding English locale files. This helps ensure consistency across all committed translations and prevents accidental reordering going forward

The new `lint-locale-key-ordering.js` script checks both backend (`src/i18n/locales`) and frontend (`webview-ui/src/i18n/locales`) translation files. It identifies missing keys, extra keys, and keys that are out of order compared to the English reference.

This linter will run as part of the `code-qa` workflow.

--- a/.github/workflows/code-qa.yml
+++ b/.github/workflows/code-qa.yml
@@ -18,6 +18,8 @@ jobs:
               uses: ./.github/actions/setup-node-pnpm
             - name: Verify all translations are complete
               run: node scripts/find-missing-translations.js
+            - name: Verify all translations are ordered properly
+              run: node scripts/lint-locale-key-ordering.js
 
     knip:
         runs-on: ubuntu-latest
