--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -6,7 +6,8 @@
 		"lint": "eslint src --ext=ts,tsx --max-warnings=0",
 		"check-types": "tsc",
 		"pretest": "turbo run bundle --cwd ..",
-		"test": "jest -w=40%",
+		"test": "jest -w=40% && vitest run",
+		"test:vitest": "vitest run",
 		"format": "prettier --write src",
 		"dev": "vite",
 		"build": "tsc -b && vite build",
@@ -89,10 +90,12 @@
 		"@types/testing-library__jest-dom": "^5.14.5",
 		"@types/vscode-webview": "^1.57.5",
 		"@vitejs/plugin-react": "^4.3.4",
+		"@vitest/ui": "^3.2.3",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-simple-dot-reporter": "^1.0.5",
+		"jsdom": "^26.0.0",
 		"ts-jest": "^29.2.5",
 		"typescript": "5.8.3",
 		"vite": "6.3.5",
