Fixes #4792: Add auto-import config on extension load
- Add new VSCode setting 'roo-cline.autoImportConfigPath' for specifying config file path
- Implement autoImportConfig utility function with path resolution and error handling
- Integrate auto-import functionality into extension activation
- Add comprehensive test coverage for auto-import scenarios
- Support absolute paths, relative paths, and home directory expansion (~/)
- Graceful error handling - extension continues to work if config import fails
- User notifications for successful imports and warnings for failures

--- a/src/package.json
+++ b/src/package.json
@@ -333,6 +333,11 @@
 					"type": "boolean",
 					"default": true,
 					"description": "%settings.enableCodeActions.description%"
+				},
+				"roo-cline.autoImportConfigPath": {
+					"type": "string",
+					"default": "",
+					"description": "%settings.autoImportConfigPath.description%"
 				}
 			}
 		}
