fix: keep title as 'Detailed Feature Proposal'
- Reverted title change from 'Feature Request' back to 'Detailed Feature Proposal'
- Maintained all other structural improvements for problem-focused workflow

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-name: Feature Request
+name: Detailed Feature Proposal
 description: Report a specific problem that needs solving in Roo Code
 labels: ["proposal", "enhancement"]
 body:
