Fix roocode.com Vercel preview on PR open

--- a/.github/workflows/website-preview.yml
+++ b/.github/workflows/website-preview.yml
@@ -6,6 +6,9 @@ on:
             - main
         paths:
             - 'apps/web-roo-code/**'
+    pull_request:
+        paths:
+            - 'apps/web-roo-code/**'
     workflow_dispatch:
 
 env:
