--- a/apps/web-roo-code/package.json
+++ b/apps/web-roo-code/package.json
@@ -53,6 +53,7 @@
 		"autoprefixer": "^10.4.21",
 		"drizzle-kit": "^0.31.0",
 		"postcss": "^8.5.4",
-		"tailwindcss": "^3.4.17"
+		"tailwindcss": "^3.4.17",
+		"tsx": "^4.19.3"
 	}
 }
