--- a/src/package.json
+++ b/src/package.json
@@ -103,8 +103,7 @@
 			{
 				"command": "roo-cline.accountButtonClicked",
 				"title": "Account",
-				"icon": "$(account)",
-				"when": "config.roo-cline.rooCodeCloudEnabled"
+				"icon": "$(account)"
 			},
 			{
 				"command": "roo-cline.settingsButtonClicked",
@@ -247,7 +246,7 @@
 				{
 					"command": "roo-cline.accountButtonClicked",
 					"group": "navigation@7",
-					"when": "view == roo-cline.SidebarProvider && config.roo-cline.rooCodeCloudEnabled"
+					"when": "view == roo-cline.SidebarProvider"
 				},
 				{
 					"command": "roo-cline.settingsButtonClicked",
@@ -284,7 +283,7 @@
 				{
 					"command": "roo-cline.accountButtonClicked",
 					"group": "navigation@6",
-					"when": "activeWebviewPanelId == roo-cline.TabPanelProvider && config.roo-cline.rooCodeCloudEnabled"
+					"when": "activeWebviewPanelId == roo-cline.TabPanelProvider"
 				},
 				{
 					"command": "roo-cline.settingsButtonClicked",
@@ -339,11 +338,6 @@
 					"type": "string",
 					"default": "",
 					"description": "%settings.customStoragePath.description%"
-				},
-				"roo-cline.rooCodeCloudEnabled": {
-					"type": "boolean",
-					"default": false,
-					"description": "%settings.rooCodeCloudEnabled.description%"
 				}
 			}
 		}
